syntax = "proto3";
package work;

option go_package = "github.com/jpoz/protojob/examples/error/work";

message FailSometimes {
  string payload = 1;
}

message Child {
  string payload = 1;
}

message OnComplete {
  string payload = 1;
}
